<resources>
    <string name="app_name">Travel</string>
    <string name="text_home">首页</string>
    <string name="tips">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="load_error">加载失败</string>
    <string name="text_loading">努力加载中...</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="listview_header_hint_normal">下拉刷新...</string>
    <string name="listview_header_hint_release">释放刷新...</string>
    <string name="listview_loading">努力加载中...</string>
    <string name="nomore_loading">没有更多内容了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成...</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="nagv_home">首页</string>
    <string name="nagv_case">案例</string>
    <string name="nagv_live">直播间</string>
    <string name="nagv_myself">我的</string>
    <string name="text_jump">跳过</string>
    <string name="text_live">微赞直播</string>
    <string name="text_new">新手必备</string>
    <string name="text_live_service">直播服务</string>
    <string name="text_open">免费开通</string>
    <string name="text_meeting">年会直播</string>
    <string name="video_headlines">视频头条</string>
    <string name="text_business_live">电商直播</string>
    <string name="text_more">查看更多</string>
    <string name="text_horizon_business">横屏电商</string>
    <string name="text_big_coffee">遇见大咖</string>
    <string name="text_work_meeting">周例会</string>
    <string name="know">知道了</string>
    <string name="permission_desc">为了应用正常使用，请确认一下权限</string>
    <string name="txt_use"><![CDATA[立即体验>>]]></string>
    <string name="text_default">默认</string>
    <string name="text_build_live">新建直播</string>
    <string name="text_build_channel">新建频道</string>
    <string name="text_live_guide">直播间</string>
    <string name="text_live_background">直播间后台</string>
    <string name="text_live_change">切换直播间</string>
    <string name="text_all_fans">所有粉丝数</string>
    <string name="text_all_income">直播间总收益（元）</string>
    <string name="text_new_issue">新建话题</string>
    <string name="text_live_setting">直播间设置</string>
    <string name="text_income">总收益（元）</string>
    <string name="text_management">我管理的</string>
    <string name="text_access">关注直播间</string>
    <string name="text_history">历史浏览</string>
    <string name="text_buy">我购买的</string>
    <string name="text_feedback">产品反馈</string>
    <string name="text_advice">咨询电话</string>
    <string name="text_setting">设置</string>
    <string name="text_fans">粉丝数</string>
    <string name="text_classic_case">经典案例</string>
    <string name="empty_live_url">直播地址不能为空</string>
    <string name="start_connection">开始连接</string>
    <string name="stop_living">停止直播</string>
    <string name="camera_open_success">相机打开成功</string>
    <string name="camera_open_failde">相机打开失败</string>
    <string name="camera_switch">切换摄像头</string>
    <string name="start_living_failde">直播失败</string>
    <string name="start_living_success">直播成功</string>
    <string name="publish_stream_failed">传流失败</string>
    <string name="push_stream_success">推流成功</string>
    <string name="push_stream_failed">推流失败</string>
    <string name="push_stream_error">推流出错,请尝试重连</string>
    <string name="close_stream_success">关闭推流状态成功</string>
    <string name="close_stream_failed">关闭推流状态失败</string>
    <string name="start_record_video">开始录制视频</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="tweet_public">发布动弹</string>
    <string name="uri_test_image">http://i3.letvimg.com/lc08_yunzhuanma/201707/29/20/49/3280a525bef381311b374579f360e80a_v2_MTMxODYyNjMw/thumb/2_960_540.jpg</string>
    <string name="detail_text">详细信息</string>
    <string name="text_rotate">旋转画面</string>
    <string name="text_scale">默认比例</string>
    <string name="text_transform">旋转镜像</string>
    <string name="left_transform">左右镜像</string>
    <string name="top_transform">上下镜像</string>
    <string name="scan_transform">旋转镜像</string>
    <string name="text_play">播放视频</string>
    <string name="loading">请稍候</string>
    <string name="load_failed">加载失败,点击重试</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="text_register">注册</string>
    <string name="text_login">登录</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_find_password">找回密码</string>
    <string name="text_sure">确认</string>
    <string name="text_code">验证码</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="text_edit_password">修改密码</string>
    <string name="edit_password_success">修改密码成功</string>
    <string name="edit_password_failed">修改密码失败</string>
    <string name="no_telphone">该手机号不存在</string>
    <string name="text_finish">完成</string>
    <string name="input_sure_password">请确认密码</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="already_register">已经注册</string>
    <string name="code_failed">验证码失败</string>
    <string name="failed">失败</string>
    <string name="press_back">再按一次退出程序</string>
    <string name="text_recommend">推荐</string>
    <string name="text_enroll">报名年会</string>
    <string name="text_save_album">保存到相册</string>
    <string name="text_cancel">取消</string>
    <string name="text_save_success">图片保存成功</string>
    <string name="text_save_failed">保存失败</string>
    <string name="already_exit">已经存在</string>
    <string name="text_enroll_meeting">我要报名年会直播!</string>
    <string name="text_name">姓名</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_contact">请输入联系方式</string>
    <string name="text_contact">联系方式</string>
    <string name="text_company_name">公司名称</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="text_area">地区</string>
    <string name="input_area">请输入地区</string>
    <string name="text_enroll_submit">提交报名</string>

    <string name="rewards_list">打赏榜</string>
    <string name="invited_list">邀请榜</string>
    <string name="text_my_invited">我的邀请卡</string>
    <string name="text_channel">频道</string>
    <string name="text_time">2018-04-26</string>
    <string name="text_detail">详情</string>
    <string name="text_invited_card">我的邀请卡</string>
    <string name="text_card">邀请卡</string>
    <string name="text_change">更换邀请卡主题</string>
    <string name="text_play_card">如何玩转邀请卡</string>
    <string name="text_card_content">1、公开话题/加密话题邀请好友来看直播帮上有名\n2、长按保存图片发送给好友即可邀请</string>
    <string name="text_send">发送</string>
    <string name="empty_content">输入内容不能为空</string>
    <string name="text_more_detail">主题详情</string>
    <string name="text_into_live">进入直播</string>
    <string name="text_start_time">开始时间</string>
    <string name="text_describes">主播介绍：</string>
    <string name="text_live_summary">直播概要：</string>
    <string name="text_topic_number">话题数</string>
    <string name="text_attention_number">关注人数</string>
    <string name="text_interaction">邀请榜</string>
    <string name="text_myself">我的</string>
    <string name="text_modify">修改信息</string>
    <string name="text_icon">头像</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_telephone">手机号码</string>
    <string name="text_choose_album">从相册选择</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_verify_phone">手机验证</string>
    <string name="text_verification_code">验证码</string>
    <string name="text_verification_start">开始验证</string>
    <string name="text_seconds">秒</string>
    <string name="no_empty_telphone">手机号不能为空</string>
    <string name="input_nick_name">昵称不能为空</string>
    <string name="text_binding_phone">绑定手机号</string>
    <string name="text_remind_message">消息提醒</string>
    <string name="text_clear_cash">清空缓存</string>
    <string name="text_app_version">APP版本</string>
    <string name="text_soft_score">软件评分</string>
    <string name="text_exit_login">退出登录</string>
    <string name="text_phone_binding">手机绑定</string>
    <string name="input_binding_phone">输入绑定手机号码</string>
    <string name="text_next">下一步</string>
    <string name="text_attention_content">注：手机+验证码通过验证并且成功设置密码后，可用手机号码+密码的方式登录app</string>
    <string name="no_empty_telphone_or_verify">手机号或者验证码不能为空</string>
    <string name="downloading">正在下载...</string>
    <string name="lastet_version">已经是最新版本,无需更新</string>
    <string name="text_my_history">我浏览的主题</string>
    <string name="text_new_channel">新建频道</string>
    <string name="text_channel_name">频道名称</string>
    <string name="text_channel_type">频道类型</string>
    <string name="text_openly">公开</string>
    <string name="text_fixed_charge">固定收费</string>
    <string name="text_monthly_fee">按月收费</string>
    <string name="text_encryption">加密</string>
    <string name="text_create_channel">创建频道</string>
    <string name="text_channel_content"><![CDATA[频道可以用来举办系列直播和会员专享直播更多频道的简介内容请登录到电脑端->微赞live后台进行设置<font color=\'#0983FC\'>http://live.vzan.com/</font>]]></string>
    <string name="input_channel_name">请输入频道名称</string>
    <string name="text_attention">关注的直播间</string>
    <string name="bottom_behavior">com.tianyu.live.view.behavior.BottomNavigationBehavior</string>
    <string name="text_new_live">新建直播</string>
    <string name="text_invited_manager">邀请管理员</string>
    <string name="text_edit">编辑</string>
    <string name="text_attend_number">参与人数</string>
    <string name="text_attend_introduced">开启后显示包括包名人数以及相关用户名和头像，关闭则不显示</string>
    <string name="text_application_number">报名人数：</string>
    <string name="text_stream_start">开始推流</string>
    <string name="text_record_start">开始录制</string>
    <string name="text_video_stream">视频直播</string>
    <string name="text_audio_stream">音频直播</string>
    <string name="text_music_list">音乐列表</string>
    <string name="text_address">地址：</string>
    <string name="text_manage_adverte">广告管理</string>
    <string name="text_see">查看</string>
    <string name="choose_city">城市选择</string>
    <string name="text_car_list">车辆列表</string>
    <string name="gps_failed">获取位置信息失败</string>

    <string name="text_charge_standard">收费标准</string>
    <string name="text_slogan">标语：</string>
    <string name="input_slogan">标语内容</string>
    <string name="text_remark">备注：</string>
    <string name="input_remark">备注内容</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="text_update">更新</string>
    <string name="start_here">从这里出发</string>
    <string name="no_data">没有数据</string>
    <string name="no_result">没有结果</string>
    <string name="setting">设置</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_contact_customer_service">联系客服</string>
    <string name="text_car_online">当前在线:</string>
    <string name="nagv_car">车辆</string>
    <string name="input_averte">输入你的广告内容</string>
    <string name="text_content">内容编辑</string>
    <string name="text_sure_submit">确认发布</string>
    <string name="text_charge_detail">收费详情</string>
    <string name="charge_day">按天收费</string>
    <string name="charge_month">按月收费</string>
    <string name="charge_year">按年收费</string>
    <string name="text_choose_address">选择地址</string>
    <string name="text_charge_day"><![CDATA[每天<font color=\'#0983FC\'>20</font>元]]></string>
    <string name="text_charge_month"><![CDATA[1个月<font color=\'#0983FC\'>50</font>元]]></string>
    <string name="text_charge_year"><![CDATA[年费<font color=\'#0983FC\'>200</font>元]]></string>
    <string name="choose_picture">请选择图片</string>
</resources>
