<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/text_manage_adverte"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/lyt_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/text_choose_address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:src="@drawable/ic_update" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spn_home"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:ms_hint="@string/text_charge_detail"
                app:ms_text_color="@color/light_blue" />

            <TextView
                android:id="@+id/txt_charge_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_charge_detail"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/dp_4"
                android:background="@null"
                android:hint="@string/input_averte"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rlv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:overScrollMode="never" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_remark"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edt_home_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_remark"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_home_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_border_blue"
            android:text="@string/text_sure_submit"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
