<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.yk.adverte.view.title.CustomTitleBar
        android:id="@+id/charge_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:leftImage="@drawable/ic_back"
        app:middleTextColor="@color/black"
        app:middleTextSize="16sp"
        app:middleTitle="@string/text_charge_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_charge_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_day"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_day"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_charge_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_month"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_month"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_charge_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_year"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charge_year"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>