<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.yk.adverte.view.title.CustomTitleBar
            android:id="@+id/login_titleBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:clipToPadding="true"
            app:middleTextColor="@color/white"
            app:middleTextSize="20sp"
            app:middleTitle="@string/text_login" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:counterEnabled="true"
            app:counterMaxLength="18">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_account"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusableInTouchMode="true"
            app:counterEnabled="true"
            app:counterMaxLength="18"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/btn_normal_background"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/btn_bg_color"
            android:text="@string/text_register"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:text="@string/text_forget_password"
            android:textColor="@color/txt_color"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>