<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.yk.adverte.view.title.CustomTitleBar
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftImage="@drawable/ic_back"
            app:middleTextColor="@color/white"
            app:middleTextSize="16sp"
            app:middleTitle="@string/text_register" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account"
                android:drawablePadding="16sp"
                android:drawableStart="@drawable/ic_account"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_code"
                android:drawablePadding="16sp"
                android:drawableStart="@drawable/ic_code"
                android:gravity="center_vertical"
                android:hint="@string/input_verification_code"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_register_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/btn_bg_color"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="16sp"
                android:drawableStart="@drawable/ic_password"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/btn_normal_background"
            android:text="@string/text_register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>